# cmplPrcpProject

./: ASTNodes.cpp  ASTNodes.hpp  CMakeLists.txt  a.out  c_minus_syntax.md  compile.sh  lex.yy.c  lex.yy.cpp  lexer.l  our_syntax.md  parser.tab.c  parser.tab.cpp  parser.tab.h  parser.y  pre_groupX.pptx  readme.md  report_groupX.docx  test  test usable.mc  test.c  test.mc
